# bunt

./: CHANGELOG.md  Cargo.toml  README.md  mine.zsh-theme
.github/workflows/: ci.yml
examples/: rainbow.rs  simple.rs  test.rs  wrapper.rs
macro/: Cargo.toml
macro/src/: lib.rs
macros/: Cargo.toml
macros/src/: err.rs  gen.rs  ir.rs  lib.rs  literal.rs  parse.rs  tests.rs
macros/src/parse/: fmt.rs  lit.rs  mod.rs  style.rs
src/: lib.rs
tests/: main.rs
