[package]
name = "bunt-macros"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"
description = "Helper crate for `bunt`. Please see that crate's docs for more information."

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0.19"
syn = { version = "1", features = ["full", "extra-traits"] }
