[package]
name = "bunt-macros"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = "Helper crate for `bunt`. Please see that crate's docs for more information."
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.19"
quote = "1"
unicode-xid = "0.2.1"
