[package]
name = "bunt-macros"
version = "0.2.5"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Helper crate for `bunt`. Please see the docs of `bunt` for more information. Do
not use this crate directly, API stability is not guaranteed!
"""
repository = "https://github.com/LukasKalbertodt/bunt/"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
litrs = "0.2.3"
proc-macro2 = "1.0.19"
quote = "1"
unicode-xid = "0.2.1"
